# cipher

./: .env  .env.example  .geminiignore  .gitignore  AGENTS.md  ARCHITECTURE_PRINCIPLES.md  CLAUDE.md  GEMINI.md  GO_NOGO_CHECKLIST.md  MANUAL.md  Makefile  PROJECT_DOCUMENTATION.txt  QNT.md  README.md  cipher_project_dossier.md  pyproject.toml  requirements.txt  run_sentiment_tests.py  start_bot.sh  stop_bot.sh  test_binance.py  test_config.json  tradesv3.dryrun.sqlite
.cargo/: config.toml
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.qnt/: settings.json
.qnt/policies/: masterbot.toml
automation/: backup.sh  convert_to_parquet.py  db_migration.py  graduation_check.py  health_check.py  intelligent_reporter.py  lark_notifier.py  learning_orchestrator.py  parse_hyperopt.py  post_mortem.py  run_self_healer.sh  run_sentiment.sh  security_check.sh  self_healer.py  sync_order_flow.sh  test_hyperliquid.py  update_qnt_brain.py  verify_api_permissions.py  weekly_hyperopt.sh  weekly_report.py  workspace_reporter.py
automation/workflows/: reporting_workflow.py
bus/: __init__.py  channel.py  events.py
bus/consumers/: signal_handler.py
bus/producers/: candle_feed.py
cipher_mcp/: __init__.py  server.py
cipher_mcp/tools/: __init__.py  hyperopt.py  sentiment.py  strategy.py
config/: config_bear_scalp.json  config_daily.json  config_freqai.json  config_hyperliquid.json  config_mean_reversion.json  config_micro.json  config_paper.json  config_scalp.json  config_swing.json  config_trend_follow.json  crontab_m1.txt  dynamic_params.json  grafana_dashboard.json  paths.py  port_8085.json  prometheus.yml  sentiment_weights.json  supervisord.conf  telegram_enabled.json  vault_constraints.json
data/: BTC_USDT_1h.csv
graphify-out/: .graphify_root  GRAPH_REPORT.md  manifest.json
indicators/: __init__.py  macro_merge.py  ta_wrappers.py  time_features.py
logs/: graduation_state.json  hyperopt_summary.json  nats_subscriber.log.1  nats_subscriber.log.3
logs/reports/: weekly_report_20260511.html
mcp/: __init__.py  agent_rules.md  server.py
mcp/tools/: __init__.py  hyperopt.py  sentiment.py  strategy.py  trades.py
qnt/: .issues_log  .qwenignore  GEMINI.md  QNT.md  agent.py  browser_bridge.sh  browser_fetch.js  generate_context.sh  nats_publisher.py  nats_subjects.py  nats_subscriber.py  polars_indicators.py  polars_ohlcv.py  test_models.sh
qnt/agents/: orchestrator.py  skeptic.py  strategist.py  trade_gate.py
qnt/backup/: db_backup.py  r2_backup.py
qnt/bridge/: bridge.py
qnt/cockpit/: cockpit.py  cockpit_static.py  exporter.py
qnt/data/: backtest_calibrator.py  cdd_ingestor.py  data_pipeline.py  hf_signals_ingestor.py  historical_ingestor.py  retrain_hmm_extended.py  validation.py
qnt/freqai/: VaultFreqaiModel.py
qnt/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
qnt/hyperopt/: __init__.py  distributed.py  fitness.py  walk_forward.py
qnt/lab/: lab.py  weekly_strategy_scan_new.sh
qnt/learning/: constraint_extractor.py  outcome_validator.py  param_optimizer.py  scores.json  sentiment_calibrator.py
qnt/memory/: autonomy_router.py  com.masterbot.qnt.reconnect.plist  device_router.py  enhanced_bot.py  memory_manager.py  qnt_memory.json  qnt_notifier.py  sync_memory.sh  (+3 more)
risk/: balance_state.json  balance_tracker.py  correlation_guard.py  macro_history.json  macro_state.json  risk_manager.py  stake_sizer.py  test_risk_manager.py  volatility_breaker.py
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: lib.rs
sentiment/: export_cryptobert_onnx.py  onnx_pipeline.py  pipeline.py  reader.py  test_pipeline.py
strategies/: regime_detector.py
tests/: conftest.py  test_data_validation.py  test_event_bus.py  test_indicators.py  test_stake_sizer.py  test_vault_freqai.py  test_walk_forward.py  test_webhook.py
thesis/: BNB_USDT.json  BTC_USDT.json
(+203 files in other folders)
