[project]
name = "cipher"
version = "1.0.0"
description = "Cipher — multi-strategy autonomous crypto trading system"
requires-python = ">=3.12"

# Direct cipher dependencies only.
# freqtrade is installed separately from the local submodule (./freqtrade).
# numpy/pandas lower bounds match freqtrade's pinned versions so uv resolves consistently.
dependencies = [
    # Data / numerics
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "orjson>=3.11.9",
    "numba>=0.65.1",
    # ML / modelling
    "scikit-learn>=1.8.0",
    "xgboost>=3.0.0",
    "transformers>=5.9.0,<6.0.0",
    "onnxruntime>=1.26.0",
    "sentence-transformers>=5.5.1",
    # Vector DB
    "qdrant-client>=1.18.0",
    # Database / storage
    "duckdb>=1.5.3",
    "psycopg[c]>=3.3.4",
    # Workflow orchestration
    "prefect>=3.7.3",
    # Market data / exchange
    "order-book>=0.6.1",
    # Sentiment data sources
    "feedparser>=6.0.12",
    "praw>=7.8.1",
    "telethon>=1.43.2",
    # Automation / monitoring
    "psutil>=7.0.0",
    "supervisor>=4.3.0",
    "python-dotenv>=1.2.2",
    # AI agent + MCP server
    "pydantic-ai>=1.104.0",
    "anthropic>=0.105.2",
    "mcp>=1.27.2",
    # Distributed hyperopt
    "optuna>=4.9.0",
    "ray[default]>=2.55.1",
    # CLI / output
    "rich>=15.0.0",
    "typer>=0.26.5",
    "requests>=2.34.2",
    "httpx>=0.28.1",
    # Security floor — pin transitive deps at versions that address known CVEs:
    #   urllib3 <2.7.0: decompression-bomb bypass + sensitive-header forwarding (high)
    #   idna <3.16: encode() bypass of CVE-2024-3651 fix (medium)
    "urllib3>=2.7.0",
    "idna>=3.17",
    # Visualisation
    "matplotlib>=3.10.9",
    "plotly>=6.0.0",
    # Technical analysis (used by VectorVaultV1 feature engineering)
    "ta>=0.11.0",
    # Rust extensions (built via maturin — see rust_engine/ and risk/risk_checks_rs/)
    "rust-engine",
    "risk-checks-rs",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.15",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=2.1.0",
    "maturin>=1.5.0",
]
export = [
    "torch>=2.12.0",
    "optimum[onnxruntime]>=2.1.0",
    "transformers>=5.9.0,<6.0.0",
]

[tool.uv]
# Install freqtrade as an editable package from the local submodule.
# After cloning, run: uv pip install -e ./freqtrade
# Then: uv sync

[tool.uv.sources]
rust-engine = { path = "rust_engine", editable = true }
risk-checks-rs = { path = "risk/risk_checks_rs", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "venv",
    "freqtrade",
    "user_data",
    "risk/risk_checks_rs",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length enforced by formatter, not lint
    "E402",  # module-level import not at top — intentional (sys.path.insert before project imports)
    "F841",  # local variable assigned but never used — pre-existing in strategy files
]

[tool.ruff.lint.isort]
known-first-party = ["qnt", "risk", "sentiment", "strategies", "config", "automation", "indicators", "mcp", "bus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["freqtrade", "automation", ".venv", "node_modules", "__pycache__", ".git", "rust_engine", "risk/risk_checks_rs"]

[dependency-groups]
dev = [
    "maturin>=1.13.3",
]
