[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust-engine"
version = "1.0.0"
description = "Vectorized pattern-matching engine for VectorVaultV1 — parallel Euclidean nearest-neighbor"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
